updated the message...again

--- a/chrome/one/popup.html
+++ b/chrome/one/popup.html
@@ -3,6 +3,9 @@
   <head>
   </head>
   <body>
-    Hello Chasmo!!!
+    Hey! I see you clicked this...<br /> 
+    So now you have an idea! (it has a lightbulb!)<br />
+	*Makes ding sound*<br />
+	Your idea is:
   </body>
 </html>
